# platy-data

./: .buildinfo  .gitignore  .gitmodules  LICENSE  README.md  abstract.html  data_summary.html  data_summary_v2.html  data_summary_v3.html  density_plots.html  gen_upsetplots.html  genindex.html  introduction.html  make_fig1.html  objects.inv  pyproject.toml  references.html  sbm_tests.html  search.html  searchindex.js  show_data_v2.html
_sources/: data_summary.ipynb  data_summary_v2.ipynb  data_summary_v3.ipynb  density_plots.ipynb  make_fig1.ipynb  sbm_tests.ipynb  show_data_v2.ipynb
docs/: _config.yml  _toc.yml  agreement_calc_ex.ipynb  data_summary.ipynb  data_summary_v2.ipynb  data_summary_v3.ipynb  data_summary_v4.ipynb  density_plots.ipynb  density_plots_v2.ipynb  density_plots_v3.ipynb  gen_upsetplots.ipynb  gen_upsetplots_v2.ipynb  gen_upsetplots_v3.ipynb  graph_match_with_class.ipynb  graph_match_with_class_v2.ipynb  graph_match_with_class_v3.ipynb  graph_match_with_class_v4.ipynb  graph_match_with_class_v5.ipynb  graph_match_without_class.ipynb  make_fig1.ipynb  sbm_tests.ipynb  sbm_tests_v2.ipynb  sbm_tests_v3.ipynb  show_data.ipynb  show_data.py  show_data_v2.ipynb
images/: README.html
outputs/: README.html
sandbox/: fly_sim_2.ipynb
scripts/: .density_plots.ipynb.icloud  .fly_sim.ipynb.icloud  .gen_upsetplots.ipynb.icloud  __init__.py  density_plots.ipynb  fly_sim.ipynb  gen_upsetplots.ipynb  get_platy_data.py  load_data.py  make_fig1.ipynb  make_fig1_ase.ipynb  platy_url_debug.py  platy_url_errors.ipynb
slides/: README.html
(+126 files in other folders)
